--- a/akara.html
+++ b/akara.html
@@ -4,58 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Akara place</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    h1 {
-      text-align: center;
-    }
-
-    
-    .product {
-      display: flex;
-      margin-bottom: 20px;
-      border: 1px solid #ccc;
-      padding: 10px;
-    }
-
-    .product img {
-      max-width: 100px;
-      margin-right: 10px;
-    }
-
-    .cart {
-      border: 1px solid #ccc;
-      padding: 10px;
-    }
-
-    .checkout-btn {
-      display: block;
-      margin: 20px auto;
-      padding: 10px 20px;
-      background-color: #4CAF50;
-      color: #fff;
-      text-align: center;
-      text-decoration: none;
-      border: none;
-      cursor: pointer;
-    }
-  </style>
+  <link rel="stylesheet" href="akara.css">
 </head>
 <body>
   <div class="container">
     <h1>Welcome to Bean Cake Shop - Online Store</h1>
 
     <div class="product">
-      <img src="bean_cake_1.jpg" alt="Bean Cake 1">
+      <img src="photo.webp" alt="Bean Cake 1">
       <div>
         <h2>Classic Bean Cake</h2>
         <p>Our original bean cake made with love and the finest ingredients.</p>
@@ -65,7 +21,7 @@
     </div>
 
     <div class="product">
-      <img src="bean_cake_2.jpg" alt="Bean Cake 2">
+      <img src="photo (1).webp" alt="Bean Cake 2">
       <div>
         <h2>Caramel Swirl Bean Cake</h2>
         <p>A delightful bean cake with a swirl of caramel goodness.</p>
