--- a/akara.html
+++ b/akara.html
@@ -26,7 +26,9 @@
         <h2>Caramel Swirl Bean Cake</h2>
         <p>A delightful bean cake with a swirl of caramel goodness.</p>
         <p>Price: $12.00</p>
-        <button onclick="addToCart('Caramel Swirl Bean Cake', 12.00)">Add to Cart</button>
+        <button onclick="addToCart('Caramel Swirl Bean Cake', 12.00)">Add to Cart</button> 
+        <img src="117715632_154782229574918_5300651403994007647_n.jpg">
+         <p>our showcase pic</p>
       </div>
     </div>
 
