--- a/akara.html
+++ b/akara.html
@@ -11,7 +11,7 @@
     <h1>Welcome to Bean Cake Shop - Online Store</h1>
 
     <div class="product">
-      <img src="photo.webp" alt="Bean Cake 1">
+      <img src="photo.webp" alt="Bean Cake 1" width="390px">
       <div>
         <h2>Classic Bean Cake</h2>
         <p>Our original bean cake made with love and the finest ingredients.</p>
@@ -21,8 +21,8 @@
     </div>
 
     <div class="product">
-      <img src="" alt="Bean Cake 2">
-      <img src="photo (1).webp" alt="Bean Cake 2">
+      <img src="" alt="Bean Cake 2" width="300px">
+      <img src="photo (1).webp" alt="Bean Cake 2" width="400px">
       <div>
         <h2>Caramel Swirl Bean Cake</h2>
         <p>A delightful bean cake with a swirl of caramel goodness.</p> 
