--- a/akara.html
+++ b/akara.html
@@ -8,13 +8,14 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to Bean Cake Shop - Online Store</h1>
+    <h1>Welcome to Bean Cake Shop - Online Store</h1> 
+    <h1>come shop with us today now</h1>
 
     <div class="product">
       <img src="photo.webp" alt="Bean Cake 1" width="390px">
       <div>
         <h2>Classic Bean Cake</h2>
-        <p>Our original bean cake made with love and the finest ingredients.</p>
+        <p>Our original bean cake made with love and the finest ingredients that you can ever imagined.</p>
         <p>Price: $10.00</p>
         <button onclick="addToCart('Classic Bean Cake', 10.00)">Add to Cart</button>
       </div>
